--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -31,6 +31,7 @@ body {
   color: $color-grey-dark-2;
   font-weight: 300;
   line-height: 1.6;
+  background-color: $color-grey-light-1;
 }
 .container {
   display: grid;
