--- a/src/sass/_homes.scss
+++ b/src/sass/_homes.scss
@@ -11,6 +11,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 3.5rem;
+    box-shadow: 0 2rem 5rem rgba(black, 0.2);
+
     &__img {
       width: 100%;
       grid-column: 1/-1;
