--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,4 +2,37 @@
   background-color: $color-secondary;
   grid-column: full-start / full-end;
   padding: 10rem 0;
+
+  .nav {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center;
+    &__link:link,
+    &__link:visited {
+      color: #fff;
+      text-decoration: none;
+      font-family: $font-display;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 1.5rem;
+      transition: all 0.2s;
+      display: block;
+      // background-color: rgba(#fff, 0.05);
+    }
+    &__link:hover,
+    &__link:active {
+      background-color: rgba(#fff, 0.1);
+      transform: translateY(-3px);
+    }
+  }
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  font-size: 1.4rem;
+  color: $color-grey-light-1;
+  margin-top: 6rem;
 }
