--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,25 @@
 .header {
   background-color: $color-grey-dark-1;
   grid-column: full-start/col-end 6;
+  background-image: linear-gradient(
+      rgba($color-secondary, 0.93),
+      rgba($color-secondary, 0.93)
+    ),
+    url(../img/hero.jpeg);
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-rows: 1fr;
+  &__logo {
+    height: 3rem;
+  }
+  &__seenon-text {
+    font-size: 1.6rem;
+    color: $color-grey-light-2;
+  }
+  &__seenon-logos {
+    img {
+      height: 1.5rem;
+    }
+  }
 }
