--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $color-grey-dark-1;
+  // background-color: $color-grey-dark-1;
   grid-column: full-start/col-end 6;
   background-image: linear-gradient(
       rgba($color-secondary, 0.93),
@@ -9,17 +9,47 @@
   background-size: cover;
   background-position: center;
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-row-gap: 1.5rem;
+
+  grid-template-columns: max-content;
+  padding: 8rem;
+  padding-top: 4rem;
+  justify-content: center;
+
   &__logo {
     height: 3rem;
+    justify-self: center;
+  }
+  &__btn {
+    align-self: start;
+    justify-self: start;
   }
   &__seenon-text {
     font-size: 1.6rem;
     color: $color-grey-light-2;
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    grid-column-gap: 1.5rem;
+    &::before,
+    &::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor;
+      // margin: 0 2rem;
+      align-self: center;
+    }
   }
-  &__seenon-logos {
+  &__seenon-logo {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 3rem;
+    justify-content: center;
+
     img {
-      height: 1.5rem;
+      height: 2.5rem;
+      filter: brighten 70%;
     }
   }
 }
