responsive-real-estate-website

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -9,14 +9,16 @@
   background-size: cover;
   background-position: center;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-row-gap: 1.5rem;
 
-  grid-template-columns: max-content;
+  grid-template-columns: minmax(margin-top, max-content);
   padding: 8rem;
   padding-top: 4rem;
   justify-content: center;
-
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
   &__logo {
     height: 3rem;
     justify-self: center;
@@ -46,9 +48,11 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 3rem;
     justify-content: center;
+    align-items: center;
 
     img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brighten 70%;
     }
   }
