--- a/src/sass/_realtors.scss
+++ b/src/sass/_realtors.scss
@@ -2,17 +2,24 @@
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
   display: grid;
+
   align-content: center;
   justify-content: center;
   grid-row-gap: 2rem;
-
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
   &__list {
     display: grid;
+
     grid-template-columns: min-content max-content;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center;
     padding: 3rem;
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
   }
   &__img {
     width: 7rem;
