--- a/src/sass/_story.scss
+++ b/src/sass/_story.scss
@@ -4,6 +4,7 @@
     grid-column: full-start / col-end 4;
     display: grid;
     align-items: center;
+    background-size: cover;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     background-image: linear-gradient(
@@ -11,6 +12,10 @@
         rgba($color-primary, 0.5)
       ),
       url(../img/back.jpg);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 3rem;
+    }
   }
 
   &__img--1 {
@@ -18,6 +23,10 @@
     grid-row: 2/6;
     grid-column: 2/6;
     box-shadow: 0 2rem 5rem rgba(black, 0.1);
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+    }
   }
 
   &__img--2 {
@@ -26,6 +35,10 @@
     grid-column: 4/7;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(black, 0.2);
+    @media only screen and (max-width: $bp-medium) {
+      width: 100%;
+      grid-row: 1 / -1;
+    }
   }
 
   &__content {
@@ -42,6 +55,11 @@
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
