--- a/src/sass/_realtors.scss
+++ b/src/sass/_realtors.scss
@@ -9,6 +9,7 @@
   @media only screen and (max-width: $bp-medium) {
     grid-column: 1 / -1;
   }
+
   &__list {
     display: grid;
 
@@ -19,6 +20,9 @@
     padding: 3rem;
     @media only screen and (max-width: $bp-medium) {
       grid-template-columns: repeat(3, min-content max-content);
+    }
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
     }
   }
   &__img {
